--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,8 @@
 				<ul id="messages"></ul>
 			</div>
 			<div id="activeUsers">
+				<h2 id="usersHeader">Who out there</h2>
 				<ul id="users">
-					<li id="user">Who out there</li>
 				</ul>
 			</div>
 			<div id="inputBox">
