added background image

--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 		<div id="chatPanel">
 			<div id="nameEntry">
 				<form id="userForm" action="">
-					<input id="name" autocomplete="off" /><button id="sendName">Becoming Self</button>
+					<input id="name" autocomplete="off" autofocus><button id="sendName">Becoming Self</button>
 				</form>
 			</div>
 			<div id="chatWindow">
